Resolve list all worker available
